--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <title>Flickr Search | Universal React Redux Webpack</title>
 </head>
 <body>
-    <div class="app" id=""root"></div>
+    <div class="app" id="root"></div>
     <script src="./bundle.js"></script>
 </body>
 </html>
